# santorini-marl

./: .gitignore  .pylintrc  README.md  cli.py  main.py  pyproject.toml  santorini_env.py
santorini/: board.py  cli.py  config.py  env.py  game.py  main.py  play_vs_model.py  player.py  renderer.py  santorini_env.py  train.py  utils.py  worker.py
santorini/assets/: dome.aseprite  grass.aseprite  level1.aseprite  level2.aseprite  level3.aseprite  player1.aseprite  player2.aseprite
scripts/: evaluate.py  train_santorini.py
tests/: conftest.py  test_board.py  test_player.py  test_utils.py
