[tool.poetry]
name = "santorini"
version = "0.1.0"
description = ""
authors = ["Kenneth <kencubed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
pygame = "^2.5.2"
gymnasium = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
