[project]
name = "santorini"
version = "0.1.0"
description = "A recreation of the board game Santorini in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1.1",
    "numpy>=2.2.5",
    "pettingzoo>=1.25.0",
    "pygame>=2.6.1",
    "pytest>=8.3.5",
]

[project.scripts]
cli = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "sb3-contrib>=2.6.0",
    "supersuit>=3.10.0",
]
