[project]
name = "santorini"
version = "0.1.0"
description = "A recreation of the board game Santorini in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1.1",
    "numpy>=2.2.5",
    "pettingzoo>=1.25.0",
    "pygame>=2.6.1",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "sb3-contrib",
]

[project.scripts]
santorini = "santorini.play_vs_model:main"
cli = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "supersuit>=3.10.0",
]

[tool.uv.sources]
sb3-contrib = { git = "https://github.com/Stable-Baselines-Team/stable-baselines3-contrib.git" }
